fix a few mistakes

--- a/notebooks/MNIST_TF.ipynb
+++ b/notebooks/MNIST_TF.ipynb
@@ -221,7 +221,7 @@
     "editable": true
    },
    "source": [
-    "### Access through index"
+    "### Access by index"
    ]
   },
   {
@@ -2199,21 +2199,71 @@
     "editable": true
    },
    "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "# MIC DROP!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -2298,33 +2348,6 @@
     "deletable": true,
     "editable": true
    },
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Wait! Why do we have to settle for 93% accuracy?**\n",
     "\n",
@@ -2333,26 +2356,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## We need to go deeper!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "![](deeper.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "$$\n",
     "Hidden\\ Layer\\ 1,\\ h_1 = W_1x + b_1\\\\\n",
-    "Hidden\\ Layer\\ 2,\\ h_2 = W_2x + b_2\\\\\n",
-    "logits = W_3h_2 + b_3\\\\\n",
+    "logits = W_2h_1 + b_2\\\\\n",
     "probs = softmax(logits)\\\\\n",
     "label = argmax(probs)\n",
     "$$"
@@ -2360,7 +2391,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Back to the Graph!"
    ]
@@ -2369,7 +2403,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2384,7 +2420,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Layer 1"
    ]
@@ -2393,7 +2432,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2406,7 +2447,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Layer 2"
    ]
@@ -2415,7 +2459,9 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2427,28 +2473,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Layer 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": [
-    "W3 = tf.get_variable(name='W3', shape=[256, 10], dtype=tf.float32,\n",
-    "                    initializer= xav())\n",
-    "b3 = tf.zeros(name='b3', shape=[10], dtype=tf.float32)\n",
-    "logits = tf.matmul(h2, W3) + b3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Training Operation"
    ]
@@ -2457,7 +2485,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2474,7 +2504,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Begin Training"
    ]
@@ -2483,28 +2516,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 10000 : accuracy = 94.69375%\n",
-      "\t Validation accuracy : 97.94921875%\n",
-      "Iteration 20000 : accuracy = 99.3984375%\n",
-      "\t Validation accuracy : 98.2421875%\n",
-      "Iteration 30000 : accuracy = 99.90125%\n",
-      "\t Validation accuracy : 99.0234375%\n",
-      "Iteration 40000 : accuracy = 99.98125%\n",
-      "\t Validation accuracy : 98.14453125%\n",
-      "Iteration 50000 : accuracy = 99.9915625%\n",
-      "\t Validation accuracy : 98.53515625%\n",
-      "Iteration 60000 : accuracy = 99.9946875%\n",
-      "\t Validation accuracy : 98.53515625%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# recreate session\n",
     "#  just for fun\n",
@@ -2538,7 +2554,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -2547,7 +2565,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -2556,7 +2576,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
